--- a/src/app/login-screen/login-screen.component.css
+++ b/src/app/login-screen/login-screen.component.css
@@ -1,14 +1,7 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
-  
+
 :host{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+    align-items: center;
 }  
